ferritin/src/snapshots/ferritin__tests__get_generic_enum_tty_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests(Commands::get(\"crate::GenericEnum\"), OutputMode :: Tty)"
---
Item: GenericEnum
Kind: Enum
Visibility: Public
Defined at: [fixture_crate](https://docs.rs/fixture-crate/0.1.0/fixture-crate/index.html)::[GenericEnum](https://docs.rs/fixture-crate/0.1.0/fixture-crate/enum.GenericEnum.html)
In crate: fixture-crate (0.1.0)

A generic enum for testing

See also [crate::TestEnum](https://docs.rs/fixture-crate/0.1.0/fixture-crate/submodule/enum.TestEnum.html)

enum GenericEnum<T, U = [String](http://docs.rust-lang.org/nightly/alloc/string/struct.String.html)>
where
    T: [Clone](http://docs.rust-lang.org/nightly/core/clone/trait.Clone.html) + [Send](http://docs.rust-lang.org/nightly/core/marker/trait.Send.html),
    U: [std::fmt::Display](http://docs.rust-lang.org/nightly/core/fmt/trait.Display.html) {
    Simple,
    WithData(T),
    Mixed {
        data: T,
        info: U,
    },
}

Variants:

  ◦ Simple 
    Simple variant

  ◦ WithData 
    Variant with generic data

  ◦ Mixed 
    Variant with mixed generics

Trait Implementations

std traits: [Any](https://doc.rust-lang.org/nightly/core/any/index.html?search=core%3A%3Aany%3A%3AAny) [Borrow](https://doc.rust-lang.org/nightly/core/borrow/index.html?search=core%3A%3Aborrow%3A%3ABorrow) [BorrowMut](https://doc.rust-lang.org/nightly/core/borrow/index.html?search=core%3A%3Aborrow%3A%3ABorrowMut) [Freeze](https://doc.rust-lang.org/nightly/core/marker/index.html?search=core%3A%3Amarker%3A%3AFreeze) [From](https://doc.rust-lang.org/nightly/core/convert/index.html?search=core%3A%3Aconvert%3A%3AFrom) [Into](https://doc.rust-lang.org/nightly/core/convert/index.html?search=core%3A%3Aconvert%3A%3AInto) [RefUnwindSafe](https://doc.rust-lang.org/nightly/core/panic/unwind_safe/index.html?search=core%3A%3Apanic%3A%3Aunwind%5Fsafe%3A%3ARefUnwindSafe) [Send](https://doc.rust-lang.org/nightly/core/marker/index.html?search=core%3A%3Amarker%3A%3ASend) [Sync](https://doc.rust-lang.org/nightly/core/marker/index.html?search=core%3A%3Amarker%3A%3ASync) [Try](https://doc.rust-lang.org/nightly/core/convert/index.html?search=core%3A%3Aconvert%3A%3ATryFrom)
[From](https://doc.rust-lang.org/nightly/core/convert/index.html?search=core%3A%3Aconvert%3A%3ATryFrom) [TryInto](https://doc.rust-lang.org/nightly/core/convert/index.html?search=core%3A%3Aconvert%3A%3ATryInto) [Unpin](https://doc.rust-lang.org/nightly/core/marker/index.html?search=core%3A%3Amarker%3A%3AUnpin) [UnsafeUnpin](https://doc.rust-lang.org/nightly/core/marker/index.html?search=core%3A%3Amarker%3A%3AUnsafeUnpin) [UnwindSafe](https://doc.rust-lang.org/nightly/core/panic/unwind_safe/index.html?search=core%3A%3Apanic%3A%3Aunwind%5Fsafe%3A%3AUnwindSafe)
